<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/areasFragment"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_areas" />
    <item
        android:id="@+id/misReservasFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_reservas" />
    <item
        android:id="@+id/torneosFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_torneos" />
    <item
        android:id="@+id/perfilFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_perfil" />
</menu>
